# Glanus

./: .env.example  .gitignore  ARCHITECTURE.md  DATABASE_SETUP.md  Dockerfile  README.md  SETUP.md  codebase_inventory.txt  docker-compose.yml  instrumentation-client.ts  instrumentation.ts  jest.config.js  jest.setup.js  middleware.ts  migrate-colors.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  seed_insight.js  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
.console-replacement-backup/: QuickConnectButton.tsx.backup  RemoteDesktopViewer.tsx.backup  client.ts.backup  generateQRCode.ts.backup  page.tsx.backup  server.ts.backup
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
components/: AuthGuard.tsx  DashboardNav.tsx  PartnerLayoutShell.tsx  WorkspaceSwitcher.tsx  WorkspaceWizard.tsx
docs/: ALERT_SYSTEM_SETUP.md  DEPLOYMENT.md  ENVIRONMENT.md  QUICKSTART.md  SECURITY.md
e2e/: alerts-crud.spec.ts  alerts.spec.ts  api-health.spec.ts  api-security.spec.ts  assets-crud.spec.ts  assets.spec.ts  auth.spec.ts  workspace-settings.spec.ts
glanus-agent/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  package-lock.json  package.json  (+1 more)
glanus-agent/src-tauri/: Cargo.toml  tauri.conf.json
glanus-agent/src-tauri/src/: client.rs  commands.rs  config.rs  executor.rs  heartbeat.rs  input.rs  lib.rs  monitor.rs  registration.rs  storage.rs  update_checker_snippet.rs  updater.rs
(+439 files in other folders)
