[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"

# System monitoring
sysinfo = "0.32"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# Configuration
config = "0.14"
toml = "0.8"

# Secure storage
keyring = "3.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform paths
dirs = "5.0"

# System info helpers
hostname = "0.4"
local-ip-address = "0.6"

# Async utilities
futures = "0.3"

# Crypto for checksums
sha2 = "0.10"

# Time utilities
chrono = "0.4"

# Input simulation (WebRTC Remote Control)
enigo = "0.2"
